--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --first-color: #083344;
-  --title-color: #083344;
+  --title-color: #155E75;
   --text-color: #979795;
   --body-color: #3C5967;
   --container-color: #fff;
