--- a/src/components/resume/Resume.css
+++ b/src/components/resume/Resume.css
@@ -17,9 +17,11 @@
 }
 
 .timeline_item {
+    display: flex;
+    flex-direction: column;
     position: relative;
     padding: 0 2.125rem;
-    padding-bottom: 3.125rem;
+    padding-bottom: 2.125rem;
 }
 
 .timeline_item:last-child {
@@ -44,7 +46,6 @@
     top: 0;
     font-size: var(--h2-font-size);
     color: var(--first-color);
-    /* background-color: var(--container-color); */
     padding: 0.4375rem 0;
 }
 
@@ -65,6 +66,16 @@
 
 .timeline_text {
     color: var(--body-color)
+}
+.more_information {
+    margin-top: auto;
+    margin-left: auto;
+    color: var(--title-color);
+    cursor: pointer;
+}
+
+.more_information:hover {
+    color: #1d84ad;
 }
 
 @media screen and (max-width: 1024px) {
