--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -16,22 +16,96 @@
     transition: .3s;
 }
 
+.nav {
+    position: absolute;
+    top: 10rem;
+    width: 100%;
+    left: 0;
+}
+
 .nav_list {
     display: flex;
     flex-direction: column;
-    row-gap: 2.5rem;
+}
+
+.nav_item {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    font-size: x-large;
+    padding: 1rem 0;
+    justify-content: center;
+}
+
+.nav_item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #F6F6F6;
+    transition: width 0.3s ease-in-out;
+}
+
+.nav_item:hover::before {
+    width: 100%;
 }
 
 .nav_link {
-    font-size: 1.5rem;
-    color: var(--title-color);
-    font-weight: var(--font-bold);
+    display: flex;
+    align-items: center;
+    color: #155E75;
+}
+
+.nav_item:hover .nav_link,
+.nav_link.active {
+    transform: translateX(-2.5rem);
+}
+
+.nav_item:hover .nav_text {
+    opacity: 1;
+    left: calc(100% + 1rem);
+}
+
+.nav_link::before {
+    transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+}
+
+.nav_link:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.nav_text {
+    position: absolute;
+    top: 50%;
+    left: 2rem;
+    transform: translateY(-50%);
+    font-size: 15px;
+    white-space: nowrap;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out, left 0.3s ease-in-out;
+}
+
+.nav_link:hover .nav_text,
+.nav_link.active .nav_text {
+    opacity: 1;
+}
+
+.nav_item .nav_link,
+.nav_item .nav_text {
     transition: .3s;
 }
 
-.nav_link:hover {
-    color: var(--first-color);
-}
+/* .nav_link.active {
+    width: 100%;
+    background-color: black;
+    color: red;
+    border: 1px solid green;
+    left: 0;
+  } */
 
 .copyright {
     color: hsl(245, 15%, 65%);
@@ -70,6 +144,7 @@
 
     .nav_toggle {
         display: flex;
+        background-color: var(--text-color);
     }
 
     .nav_toggle-open {
