--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,24 +1,21 @@
-.about_container {
-    grid-template-columns: 3fr 9fr;
-    column-gap: 1.875rem;
-}
-
-.about_data {
-    padding: 1.875rem 1.875rem 3rem 1.875rem;
+.skills_data {
+    padding: 3% 5% 6% 5%;
     align-items: center;
     justify-content: center;
     position: relative;
-    width: 1100px;
-    transition: .3s;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    transition: 0.3s;
 }
 
-.about_data:hover {
+.skills_data:hover {
     background-color: #E9E9E9;
     box-shadow: var(--shadow);
     border-radius: var(--border-radius);
 }
 
-.about_description {
+.skills_description {
     margin-bottom: 1rem;
     text-align: justify;
     line-height: 1.5;
@@ -74,31 +71,6 @@
     background-color: rgb(33, 158, 253);
 }
 
-.about_boxes {
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 1.875rem;
-    margin-top: 4.35rem;
-}
-
-.about_box {
-    display: flex;
-    column-gap: 1.5rem;
-}
-
-.about_icon {
-    font-size: var(--h1-font-size);
-    color: #5858c3;
-}
-
-.about_titles {
-    font-size: 1.875rem;
-}
-
-.about_info {
-    justify-content: center;
-    align-items: center;
-}
-
 .icon_skills {
     display: flex;
     justify-content: space-between;
@@ -106,9 +78,11 @@
     font-size: 50px;
     color: var(--first-color);
     margin-bottom: 20px;
+    flex-wrap: wrap;
 }
 
 .icon_skills label {
+    margin: 5px;
     transition: transform 0.3s ease;
 }
 
@@ -122,22 +96,18 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .about_container {
-        grid-template-columns: 720px;
+    .skills_container {
+        grid-template-columns: 1fr;
         justify-content: center;
         row-gap: 1.875rem;
     }
 
-    .about_data::before {
+    .skills_data::before {
         border-left: 10px solid transparent;
         border-right: 10px solid transparent;
         border-bottom: 10px solid #fff;
         left: 49%;
         top: -20px;
-    }
-
-    .about_img {
-        justify-self: center;
     }
 
     .about_box {
@@ -147,32 +117,55 @@
     }
 }
 
-@media screen and (max-width: 1024px) {
-    .about_container {
-        grid-template-columns: 350px;
-        justify-content: center;
-    }
-
-    .about_data::before {
-        left: 47%;
-    }
-
-    .about_data {
+@media screen and (max-width: 768px) {
+    .skills_container {
         grid-template-columns: 1fr;
-        row-gap: 1.875rem;
+        justify-content: center;
     }
 
     .about_boxes {
-        grid-template-columns: repeat(2, 150px);
+        grid-template-columns: repeat(2, 1fr);
         row-gap: 1.5rem;
         justify-content: center;
+    }
+
+    .skills_description {
+        text-align: left;
     }
 
     .about_info {
         justify-content: center;
     }
 
-    /* .btn_resume {
+    .icon_skills {
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .skills_container {
+        grid-template-columns: 1fr;
+        justify-content: center;
+    }
+
+    .skills_data {
+        width: 95%;
+        max-width: 95%;
+        height: auto;
+    }
+
+    .about_img {
         justify-self: center;
-    } */
+    }
+
+
+    .about_box {
+        flex-direction: column;
+        row-gap: .5rem;
+        text-align: center;
+    }
+
+    .icon_skills label {
+        font-size: 40px;
+    }
 }
