--- a/src/components/resume/Modal.css
+++ b/src/components/resume/Modal.css
@@ -68,4 +68,16 @@
 .label {
     color: #487D8F;
 }
-  
+
+.download-recommendation{
+    color: #487D8F;
+    text-decoration: underline;
+    transition: .3s;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.download-recommendation:hover{
+    color: var(--first-color);
+    background-color: rgb(146, 195, 241);
+}
